text updated based on styles.css + waving picture

--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
-<html>
-    <title> CarroCarros' Website! </title>
-    <body style="background-color: black;">
-        <h1 style="color:white;"><em>welcome, human...</em></h1>
+<html lang="en">
+    <head>
+        <title> CarroCarros' Website! </title>
+        <link href="styles.css" rel="stylesheet"/>
+    </head>
+    <body>
+        <h1><em>welcome, human...</em></h1>
+        <p>how're you liking it so far?</p>
+        <img src="images/waving.png" alt="wave picture">
     </body>
 </html>
