placeholder styles and page w/ text created

--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="UTF-8">
         <title> CarroCarros' Website! </title>
         <link href="styles.css" rel="stylesheet"/>
     </head>
     <body>
-        <h1><em>welcome, human...</em></h1>
-        <p>how're you liking it so far?</p>
+        <div class="header">
+            <h1><em>welcome, human...</em></h1>
+            <p>how're you liking it so far?</p>
+        </div>
+
+        <div class = "info">
+            <h2 >ABOUT ME</h2>
+            <p>Hey, it's Frank!</p>
+            <h2 >SKILLS</h2>
+            <p>I am program</p>
+            <h2 >PROJECTS</h2>
+            <p>Syllabook...</p>
+            <h2 >CONTACT</h2>
+            <p>Call me idk</p>
+        </div>
         <img src="images/waving.png" alt="wave picture">
     </body>
 </html>
